test/tooltest/effectgen/invalid/13_empty_attribute.params
/*
 * Invalid: Empty attribute
 */

struct [[ge::params(type=TEST_EMPTY_ATTR, name="TestEmptyAttr")]] TestEmptyAttrParams {
    float value1 = 1.0f;

    // Empty attribute - just [[]]
    [[]]
    int value2;
};
